[package]
name = "gotham_examples_hello_world"
description = "A Hello World example application for working with Gotham."
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4.0"

mime = "0.3"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2.6", features = ["full"] }
